c/imac/argo-workflows/resource-Middleware-traefik-forward-auth.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-forward-auth
  namespace: argo
spec:
  forwardAuth:
    address:
      http:
        authResponseHeaders:
        - X-Forwarded-User
